--- a/extension-test/extension_test.css
+++ b/extension-test/extension_test.css
@@ -543,10 +543,10 @@ body {
     line-height: 50px;
 	padding: 0px 10px;
     background: rgb(244, 245, 249);
-    visibility: hidden;
 }
 #test-div-wrapper{
     position:relative
+    top: -9999px;
 }
 
 
