--- a/extension-test/extension_test.css
+++ b/extension-test/extension_test.css
@@ -545,7 +545,7 @@ body {
     background: rgb(244, 245, 249);
 }
 #test-div-wrapper{
-    position:relative
+    position:relative;
     top: -9999px;
 }
 
