--- a/extension-test/extension_test.css
+++ b/extension-test/extension_test.css
@@ -460,9 +460,10 @@ body {
     background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(54%, #fff), color-stop(97%, #f5f5f5), to(#f5f5f5));
     background: linear-gradient(to bottom, #fff 0%, #fff 54%, #f5f5f5 97%, #f5f5f5 100%)
 }
-.help-test-page {
+#help-test-page {
     width: 60%;
-    margin: 80px auto 20px
+    margin: 80px auto 20px;
+    text-align: center;
 }
 .title {
     font-family: 'Proxima Nova Soft', sans-serif;
@@ -475,69 +476,6 @@ body {
     top: 33px;
     left: 4.3%
 }
-.test-id {
-    font-size: 22px;
-    margin: 0 0 20px 10px
-}
-.status-text {
-    margin: 20px 0 0 10px;
-    font-size: 18px;
-    line-height: 1.4
-}
-.status-text a {
-    color: #000;
-    text-decoration: none;
-    font-weight: 400
-}
-.status-text a:hover {
-    text-decoration: underline
-}
-.status-text p {
-    margin: 0
-}
-.button-copy {
-    float: right;
-    border: 1px solid #ccc;
-    font-size: 16px;
-    font-family: 'Proxima Nova Soft', sans-serif;
-    background-color: #fff;
-    font-weight: 300;
-    padding-top: 5px;
-    margin-right: 10px;
-    border-radius: 3px;
-    outline: none
-}
-.button-copy.zeroclipboard-is-hover {
-    cursor: pointer;
-    background-color: #f3f3f3
-}
-.tests {
-    padding: 20px;
-    background: #fff;
-    border: 1px solid #e8e9ed;
-    border-radius: 3px;
-    -webkit-box-shadow: 0 2px 2px rgba(1, 1, 1, .05);
-    box-shadow: 0 2px 2px rgba(1, 1, 1, .05)
-}
-.tests .test {
-    margin: 10px;
-    padding: 5px;
-    font-size: 17px;
-    border-radius: 2px;
-    word-wrap: break-word
-}
-.tests .wait {
-    background: #eee
-}
-.tests .running {
-    background: rgba(255, 255, 0, .2)
-}
-.tests .success {
-    background: rgba(43, 182, 115, .6)
-}
-.tests .failed {
-    background: rgba(224, 79, 66, .6)
-}
 #test-div {
     line-height: 50px;
 }
@@ -545,10 +483,29 @@ body {
     position:relative;
     top: -9999px;
 }
+#progressbar {
+    font-size: 30px;
+    margin: 20px;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-60%, -50%);
+}
+#incopatible-message{
+    font-size: 23px;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    width: 100%;
+}
 
-
-
-
+#incopatible-message > img {
+    margin: 0 auto 10px;
+    display: block;
+    padding-bottom: 20px;
+}
 
 
 
