--- a/extension-test/extension_test.css
+++ b/extension-test/extension_test.css
@@ -464,10 +464,11 @@ body {
     width: 60%;
     margin: 80px auto 20px;
     text-align: center;
+    padding-top: 5%
 }
 .title {
     font-family: 'Proxima Nova Soft', sans-serif;
-    font-size: 36px;
+    font-size: 45px;
     margin: 15px 0;
     display: inline-block
 }
@@ -491,7 +492,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-60%, -50%);
+    transform: translate(-60%, -10%);
 }
 p {
     font-size: 25px;
@@ -503,12 +504,8 @@ p {
     top: 30%;
     width: 100%;
 }
-
 #incopatible-message > img {
     margin: 0 auto 10px;
     display: block;
     padding-bottom: 20px;
 }
-
-
-
